--- a/Northwind.WebUI/Properties/launchSettings.json
+++ b/Northwind.WebUI/Properties/launchSettings.json
@@ -18,6 +18,7 @@
     "Northwind.WebUI": {
       "commandName": "Project",
       "launchBrowser": true,
+      "launchUrl": "/api",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
